fix(phase0): resolve functional hard errors blocking full feature walkthrough
- P0-1: use productApi.getList instead of non-existent getProductList in
  inbound/outbound list product dropdowns
- P0-2: add src/types/index.ts + common.ts so @/types resolves
- P0-3: use backend lowStockCount from getSummary() directly, fixing
  inventory summary cards
- P0-4: only pending inbound/outbound can be deleted (physical delete),
  remove void+removeById contradictory logic; add delete(Long) to services
- P0-5: add H2 schema/data init for dev profile (schema-h2.sql/data-h2.sql)
- P0-6: break Product<->Inventory circular dependency via ProductCreatedEvent
  + InventoryEventListener; InventoryService depends on mappers, not services
- P0-7: unify response body with common Result<T>/PageResult<T> across all
  controllers and GlobalExceptionHandler
- P0-8: push inventory page filters (productName/categoryId/lowStock) into
  SQL JOIN so pagination total matches filtered records
- fix: accept yyyy-MM-dd HH:mm:ss for LocalDateTime so frontend inbound/
  outbound creation works
- tests: add ResultTest, InboundServiceDeleteTest, OutboundServiceDeleteTest;
  exclude legacy drift tests via testExcludes until Phase 4 rewrite

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>