@@ -18,6 +18,8 @@ import com.inventory.vo.InboundVO;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import java.time.LocalDate;
+import java.util.stream.Collectors;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
@@ -144,6 +146,26 @@ public class InboundServiceImpl extends ServiceImpl<InboundMapper, Inbound> impl
 
     @Override
     @Transactional(rollbackFor = Exception.class)
+    public boolean delete(Long id) {
+        // 1. 验证入库单存在
+        Inbound inbound = this.getById(id);
+        if (inbound == null) {
+            throw new BusinessException("入库单不存在");
+        }
+
+        // 2. 只有待审核状态可以删除
+        if (!inbound.isPending()) {
+            throw new BusinessException("只有待审核状态的入库单可以删除");
+        }
+
+        // 3. 物理删除
+        boolean deleted = this.removeById(id);
+        log.info("删除入库单成功，id={}, inboundNo={}", id, inbound.getInboundNo());
+        return deleted;
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
     public void voidInbound(Long id) {
         // 1. 验证入库单存在
         Inbound inbound = this.getById(id);
@@ -207,7 +229,7 @@ public class InboundServiceImpl extends ServiceImpl<InboundMapper, Inbound> impl
                 vo.setProductSku(product.getSku());
             }
             return vo;
-        }).toList());
+        }).collect(Collectors.toList()));
 
         return voPage;
     }
